01-mock-external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-target
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-external-deploy
  namespace: external-target
  labels:
    app: nginx-external
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-external
  template:
    metadata:
      labels:
        app: nginx-external
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: config-volume
        configMap:
          name: nginx-mock-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-external-svc
  namespace: external-target
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: nginx-external
