02-gateway-routing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: appservice-external-slice
  namespace: demo
  labels:
    kubernetes.io/service-name: appservice-external
addressType: FQDN
ports:
- name: http
  port: 80
  protocol: TCP
endpoints:
- addresses:
  - nginx-external-svc.external-target.svc.cluster.local
  conditions:
    ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: appservice-external
  namespace: demo
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gateway-class
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: demo
spec:
  gatewayClassName: traefik-gateway-class
  listeners:
  - name: web
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-routing
  namespace: demo
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - test.localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Host
          value: nginx.localhost
    backendRefs:
    - name: appservice-external
      port: 80
